cleanup tid entries in scheduler based on jvm warning + reset unique hash map in memory + return original partition id in inventory for experiments